--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ flake8 = "*"
 [packages]
 django = "==2.2.5"
 pillow = "*"
+django-countries = "*"
+django-seed = "*"
 
 [requires]
 python_version = "3.7"
