--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,8 @@ cython_debug/
 
 uploads/
 node_modules/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
