--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-seed = "*"
 django-dotenv = "*"
 requests = "*"
 pipenv-to-requirements = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
