--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ django-dotenv = "*"
 requests = "*"
 pipenv-to-requirements = "*"
 psycopg2 = "*"
+sentry-sdk = "==0.16.1"
 
 [requires]
 python_version = "3.7"
