--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,8 @@ requests = "*"
 pipenv-to-requirements = "*"
 psycopg2 = "*"
 sentry-sdk = "==0.16.1"
+django-storages = "*"
+boto3 = "*"
 
 [requires]
 python_version = "3.7"
