--- a/Pipfile
+++ b/Pipfile
@@ -1,4 +1,3 @@
-
 [[source]]
 name = "pypi"
 url = "https://pypi.org/simple"
@@ -18,6 +17,7 @@ requests = "*"
 sentry-sdk = "==0.13.2"
 django-storages = "*"
 boto3 = "*"
+django-imagekit = "*"
 
 [requires]
 python_version = "3.7"
