--- a/requirements.txt
+++ b/requirements.txt
@@ -10,37 +10,29 @@
 # `Pipfile.lock` and then regenerate `requirements*.txt`.
 ################################################################################
 
-appdirs==1.4.4
 boto3==1.14.23
 botocore==1.17.23
 certifi==2020.6.20
 chardet==3.0.4
-distlib==0.3.1
+django-appconf==1.0.4
 django-countries==6.1.2
 django-dotenv==1.4.2
+django-imagekit==4.0.2
 django-seed==0.2.2
 django-storages==1.9.1
 django==2.2.5
 docutils==0.15.2 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 faker==4.1.1 ; python_version >= '3.4'
-filelock==3.0.12
 idna==2.10 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-importlib-metadata==1.7.0 ; python_version < '3.8'
 jmespath==0.10.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pbr==5.4.5
+pilkit==2.0
 pillow==7.2.0
-pipenv-to-requirements==0.9.0
-pipenv==2020.6.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-psycopg2==2.8.5
 python-dateutil==2.8.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2020.1
 requests==2.24.0
 s3transfer==0.3.3
-sentry-sdk==0.16.1
+sentry-sdk==0.13.2
 six==1.15.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.3.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 text-unidecode==1.3
 urllib3==1.25.9 ; python_version != '3.4'
-virtualenv-clone==0.5.4 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-virtualenv==20.0.27 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-zipp==3.1.0 ; python_version >= '3.6'
